
Changes between 2.2 and 2.3:
----------------------------
  * Added support for building DVBlast on OS X.
  * Added support for uncommitted diseqc switches.
  * Fixed ECM pid selection.

Changes between 2.1 and 2.2:
----------------------------
  * Fixed a regression that prevented ECM pass-through (-Y) from working.
  * Handle ECM pids that are described in PMT ES descriptor loop.

Changes between 2.0 and 2.1:
----------------------------
  * Fix MMI menus which were accidentally broken in 2.0
  * Remove ecm and emm output options because they weren't working
  * Better handling of changed PSI tables with same version number

Changes between 1.2 and 2.0:
----------------------------
  * Fix latency and potential packet loss during CAM communication
  * Add optional kernel patches for lower latency
  * Smooth packet output with an extra buffer
  * libdvbpsi runtime is no longer needed; biTStream development library
    is used instead
  * Add the ability to bind to a specific network interface
  * Add a configurable MTU
  * Add support for NIT in DVB compliance mode
  * Syslog support with -l option
  * Override tuning parameters with new options
  * Output all PMTs with -w, all ESs (even unknown) for a program with -z
  * Add support for ECM and EMM packets pass-through
  * Fix diseqc command with high-band tranponders
  * Add basic support for ATSC
  * Add support for MRTG statistics
  * Add detailed information for TS errors
  * Add support for getting PAT/CAT/NIT/SDT tables in dvblastctl
  * Add support for getting PMT table for chosen service in dvblastctl
  * Add support for getting PID information (bps, error counters and more)
  * Add support for setting service name and provider name per output
  * Command socket is usable with any input (ASI, DVB, UDP), previously
    only DVB input worked

Changes between 1.1 and 1.2:
----------------------------
  * Support for IPv6 output and duplicate
  * Support input from Computer Modules ASI card