@@ -4,6 +4,7 @@ Changes between 2.2 and 2.3:
   * Added support for building DVBlast on OS X.
   * Added support for uncommitted diseqc switches.
   * Fixed ECM pid selection.
+  * Add an option to allow the ES pids to be mapped to fixed values.
 
 Changes between 2.1 and 2.2:
 ----------------------------
